edits to banner

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 									<div class="content">
 										<header>
 											<h1>Aloha.<br />
-											by Matt McQuain</h1>
+											I'm Matthew McQuain.</h1>
 											<p>A free and fully responsive JavaScript developer.</p>
 										</header>
 										<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
@@ -224,10 +224,10 @@
 									</header>
 									<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 									<ul class="contact">
-										<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-										<li class="icon solid fa-phone">(000) 000-0000</li>
+										<li class="icon solid fa-envelope"><a href="#">matt.mcquain@mattmcquain.com</a></li>
+										<li class="icon solid fa-phone">(808) 227-7864</li>
 										<li class="icon solid fa-home">1234 Somewhere Road #8254<br />
-										Nashville, TN 00000-0000</li>
+										Seattle, WA</li>
 									</ul>
 								</section>
 
