--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 											<h3>Thank god it's over, eh?</h3>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>s
+												<li><a href="#" class="button">More</a></li>
 											</ul>
 										</article>
 									</div>
